# whoop-local-sync

./: .gitignore  AGENTS.md  LICENSE  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
plugins/hermes/: README.md
tests/: test_core.py  test_hermes_install.py
whoop_local_sync/: backfill.py  cli.py  client.py  hermes_install.py  oauth.py  storage.py  summary.py
whoop_local_sync/hermes_plugin/: README.md  __init__.py  plugin.yaml
