[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "whoop-local-sync"
version = "0.1.0"
description = "Local-first WHOOP OAuth sync, backfill, and Hermes plugin helpers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Agent Hammy"}]
keywords = ["whoop", "health", "oauth", "local-first", "hermes-agent"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
whoop-local = "whoop_local_sync.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
