[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "whoop-local-sync"
version = "0.1.0"
description = "Local-first WHOOP OAuth sync, backfill, and Hermes plugin helpers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "WHOOP Local Sync contributors"}]
keywords = ["whoop", "health", "oauth", "local-first", "hermes-agent"]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
whoop-local = "whoop_local_sync.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["whoop_local_sync"]

[tool.hatch.build.targets.wheel.force-include]
"whoop_local_sync/hermes_plugin" = "whoop_local_sync/hermes_plugin"
